# pysoup

./: .gitignore  README.md  UI.py  dns.resolver  domain.json  flake.nix  joint.py  limetorrent.py  pyproject.toml  requirements.txt  runsoup.sh  scraper.py  setup.py  test..py  test.py  torrentgalaxy.py  torrentquest.py
